
3.77  2013-01-11
  - Added j function to Mojo::JSON.
  - Improved tests.
  - Fixed aliasing bug in Mojo::EventEmitter.
  - Fixed WebSocket cookie bug in Mojo::UserAgent.
  - Fixed small upgrade bugs in Mojo::UserAgent::Transactor.

3.76  2013-01-10
  - Added support for multiple uploads sharing the same name to
    Mojo::UserAgent::Transactor.
  - Improved performance and memory usage of Mojo::EventEmitter.
  - Fixed support for multiple uploads in Mojolicious::Controller.

3.75  2013-01-08
  - Added to_route method to Mojo::Path.
  - Improved router performance slightly.
  - Improved documentation.
  - Improved tests.

3.74  2013-01-07
  - Improved documentation.
  - Improved tests.
  - Fixed bug where Mojolicious::Lite applications in modules would generate
    the wrong moniker.

3.73  2013-01-06
  - Deprecated Mojolicious::Commands->start in favor of
    Mojolicious::Commands->start_app.
  - Added moniker attribute to Mojolicious.
  - Added after_render hook.
  - Improved name detection in Mojolicious::Plugin::Config.
  - Improved documentation.
  - Improved tests.

3.72  2013-01-05
  - Deprecated base_tag helper.
  - Improved documentation.

3.71  2013-01-02
  - Modernized ".travis.yml".
  - Improved Mojo::EventEmitter to warn about unhandled error events.
  - Improved Mojo::UserAgent to warn more often about failed events.
  - Improved monkey_patch to patch multiple functions at once. (jberger)
  - Improved documentation.
  - Improved tests.
  - Fixed small memory leak in Mojo::DOM.

3.70  2012-12-23
  - Added accept_interval setting to Hypnotoad.
  - Reduced idle CPU usage of Mojo::Reactor::Poll.
  - Improved Mojo::Server to die more gracefully if an application class could
    not be found.
  - Improved documentation.

3.69  2012-12-20
  - Deprecated Mojolicious::Routes->namespace in favor of
    Mojolicious::Routes->namespaces.
  - Added color_field helper to Mojolicious::Plugin::TagHelpers.
  - Added date_field helper to Mojolicious::Plugin::TagHelpers.