@@ -1,5 +1,6 @@
 
 3.77  2013-01-11
+  - Added binary and text events to Mojo::Transaction::WebSocket.
   - Added j function to Mojo::JSON.
   - Improved tests.
   - Fixed aliasing bug in Mojo::EventEmitter.
